# g-and-h

./: docker-compose.yml  pyproject.toml
g_and_h/: flaskPlan.py  helper.py  helpr.py  postgreWork.py  workBitrix.py  workFlask copy.py  workFlask.py  workGS.py
g_and_h/static/: style copy.css  style.css  style_gradient.css  style_success.css
g_and_h/static/js/: index.js
g_and_h/templates/: _sales_plans.html  form copy.html  form.html  success.html
redirect/: workFlask_redirect.py
