[tool.poetry]
name = "g-and-h"
version = "0.1.0"
description = ""
authors = ["Igor Gerasimov <gerasimov.igor.98@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gspread = "^6.0.2"
sqlalchemy = "^2.0.28"
fast-bitrix24 = "^1.5.16"
oauth2client = "^4.1.3"
loguru = "^0.7.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
flask = "^3.0.2"
flask-restx = "^1.3.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
